<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FlowersMain">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_by_price"
        android:title="@string/by_price"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_by_name"
        android:title="@string/sort_by_name"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/backup_database"
        android:title="@string/BackupFavorites"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_database"
        android:title="@string/ImportFavorites"
        android:orderInCategory="500"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all"
        android:title="@string/delete_all"
        android:orderInCategory="600"
        app:showAsAction="never" />
</menu>
