<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Data Source Options">
        <ListPreference
            android:key="@string/data_source_key"
            android:title="@string/data_source_title"
            android:entries="@array/data_source_entries"
            android:entryValues="@array/data_source_values"
            android:defaultValue="@string/urlDefault"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Http Options">
        <ListPreference
            android:key="@string/http_key"
            android:title="@string/http_connection"
            android:entries="@array/http_entries"
            android:entryValues="@array/http_values"
            android:defaultValue="100"/>
    </PreferenceCategory>
</PreferenceScreen>